# hello

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake-single-platform.yml
